<resources>
    <string name="app_name">demo</string>
    <string name="title_activity_color">ColorActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="not_available">Not Available</string>

    <string name="available">Available</string>
    <string name="version">Version</string>
    <string name="ask_me_tomorrow">Ask Me Tomorrow</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_base">BaseActivity</string>

    <string name="dfu_feature_title">DFU</string>
    <string name="dfu_service_title">nRF Toolbox DFU Proxy</string>
    <string name="dfu_settings_title">DFU Settings</string>
    <string name="dfu_lib_version">DFU Library version 1.10.3</string>

    <string name="dfu_feature_title_long">DEVICE FIRMWARE UPDATE</string>
    <dimen name="dfu_feature_title_long_margin">-186dp</dimen>

    <string name="dfu_section_application_header">APPLICATION</string>
    <string name="dfu_file_name_label">File name:</string>
    <string name="dfu_file_type_label">Type:</string>
    <string name="dfu_file_size_label">Size:</string>
    <string name="dfu_file_scope_label">Scope:</string>
    <string name="dfu_file_status_label">Status:</string>
    <string name="dfu_file_size_text">%d bytes</string>
    <string name="dfu_file_status_ok">OK</string>
    <string name="dfu_file_status_ok_with_init">OK (Init file selected)</string>
    <string name="dfu_file_status_no_file">File not loaded</string>
    <string name="dfu_file_status_invalid">Invalid file</string>
    <string name="dfu_file_status_error">Reading file failed</string>
    <string name="dfu_file_status_invalid_message">Please, select valid HEX file</string>
    <string name="dfu_file_info">Info</string>

    <string name="dfu_action_select_file">SELECT FILE</string>

    <string name="dfu_alert_no_filebrowser_title">File Browser not found</string>
    <string name="dfu_alert_no_filebrowser_message">File browser application has not been found on
		your device. Would you like to download one?</string>
    <string-array name="dfu_app_file_browser">
        <item>Drive</item>
        <item>File Manager</item>
        <item>Total Commander</item>
        <item>Search for others</item>
    </string-array>
    <string-array name="dfu_app_file_browser_action">
        <item>market://details?id=com.google.android.apps.docs</item>
        <item>market://details?id=com.rhmsoft.fm</item>
        <item>market://details?id=com.ghisler.android.TotalCommander</item>
        <item>market://search?q=file manager</item>
    </string-array>

    <string name="dfu_section_dfu_header">DEVICE FIRMWARE UPDATE</string>
    <string name="dfu_action_upload">UPLOAD</string>
    <string name="dfu_action_upload_cancel">CANCEL</string>

    <string name="dfu_settings_dfu">DFU options</string>
    <string name="dfu_settings_dfu_packets_receipt_notification_label">Packets receipt notification procedure</string>
    <string name="dfu_settings_dfu_number_of_packets_label">Number of packets</string>
    <string name="dfu_settings_dfu_mbr_size">MBR size</string>
    <string name="dfu_settings_dfu_mbr_size_title">MBR size (by default 4096 bytes)</string>
    <string name="dfu_settings_dfu_keep_bond">Keep bond information</string>
    <string name="dfu_settings_dfu_assume_dfu_mode">External MCU DFU</string>
    <string name="dfu_settings_dfu_assume_dfu_mode_info">Check this switch to ON if you want to
		perform a DFU operation without jumping to the bootloader mode on a device with a DFU
		implementation from SDK 6.1 or older. To achieve the same result on any newer implementation
		the DFU Version characteristic should return value other than 0x0100.</string>
    <string name="dfu_settings_dfu_about">About DFU</string>
    <string name="dfu_settings_dfu_about_summary">DFU documentation on Nordic\'s Developer Zone</string>
    <string name="dfu_settings_dfu_information">Information</string>
    <string name="dfu_settings_dfu_number_of_packets_info">During a DFU operation a lot of data packets
		are being sent to the target. The <i>onCharacteristicWrite(...)</i> callback in Android API
		is invoked when the data has been written to the outgoing queue, not when physically sent.
		Packet receipt notifications were introduced to prevent from overflowing the queue. Depending
		on the device model, disabling the notifications or setting the value to “high” (> ~300)
		may make the DFU process freeze at some point on Android versions before Marshmallow.</string>

    <string name="dfu_file_type_title">Select file type</string>
    <string-array name="dfu_file_type">
        <item>Distribution packet (ZIP)</item>
        <item>Soft Device</item>
        <item>Bootloader</item>
        <item>Application</item>
    </string-array>
    <string name="dfu_file_init_title">Init packet</string>
    <string name="dfu_file_init_message">Do you want to select the Init packet file?\n
		The Init packet file (*.dat) should contain the device type and revision, application version,
		list of supported Soft Devices and the firmware CRC in binary format or, with old versions
		of the DFU bootloader, only the CRC (CRC-CCITT-16).
		With the new version of the bootloader the extended Init packet is <b>required</b>.</string>
    <string name="dfu_file_scope_title">Select scope</string>
    <string-array name="dfu_file_scope">
        <item>All</item>
        <item>System components only</item>
        <item>Application only</item>
    </string-array>

    <string name="dfu_uploading_percentage_label">0%</string>
    <string name="dfu_uploading_percentage">%d%%</string>
    <string name="dfu_default_name">DEFAULT DFU</string>
    <string name="dfu_confirmation_dialog_title">Application Uploading</string>
    <string name="dfu_upload_dialog_cancel_message">Are you sure to cancel upload?</string>
    <string name="dfu_success">Application has been transferred successfully.</string>
    <string name="dfu_aborted">Uploading of the application has been canceled.</string>

    <string name="dfu_help_title">Select file</string>
    <string name="dfu_help_message">A file browser application must be installed on the device before
		selecting the file.\n\nThere are number of applications available on Google Play store,
		e.g. Total Commander or File Manager, that allow you to pick a file from internal memory
		of the device. To upload a file from the Internet you may use e.g. Drive or Dropbox application.
		\n\nYou will be asked to select an application if more than one is installed. A single
		application will be launched automatically.\n\nSince <b>Android KitKat</b> you may use the
		preinstalled document picker application. Ensure <i>Show internal storage</i> option is
		enabled in the menu to use the <i>Internal storage</i>.</string>

    <string name="dfu_zip_info_text">Starting from nRF Toolbox v1.12 the new Distribution packet (ZIP)
		is the recommended method for distributing firmware upgrades. You can create the ZIP file
		using the <b>nrf util</b> tool (see GitHub). For more detailed information, see the DFU documentation.
		\n\n<b>Backward compatibility</b>
		\nThe nRF Toolbox also supports all old file formats: HEX and BIN files, separate DAT files
		and ZIP files without a manifest file but with a fixed naming convention:</string>
    <string name="dfu_about_text">The Device Firmware Update (DFU) app allows you to update the
		firmware of your Bluetooth LE device over-the-air (OTA). It is compatible with Nordic
		Semiconductor nRF5 devices with DFU bootloader enabled.
		\n\nFor more information about the DFU, see the About DFU section in Settings.</string>


    <string name="device">Device:</string>
    <string name="no_device">&lt;Select a device&gt;</string>
    <string name="select_device">Select a device</string>
    <string name="status">Status</string>
    <string name="llsWrite">LinkLossAlert</string>
    <string name="iasWrite">ImmediateAlert</string>
    <string name="scanning">Scanning for devices...</string>
    <string name="no_ble_devices">No LE devices found.</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Not connected</string>
    <string name="ready">Ready</string>
    <string name="disconnect">Disconnect</string>
    <string name="connect">connect</string>
    <string name="unpair">unpair</string>
    <string name="pair">pair</string>
    <string name="RadioButton1">Alert level high</string>
    <string name="RadioButton2">Alert level mid</string>
    <string name="RadioButton3">Stop alerting</string>
    <string name="SystemId">SystemId</string>
    <string name="ModelNumber">ModelNumber</string>
    <string name="SerialNumber">SerialNumber</string>
    <string name="FirmwareRevision">FirmwareRevision</string>
    <string name="HardwareRevision">HardwareRevision</string>
    <string name="SoftwareRevision">SoftwareRevision</string>
    <string name="ManufactureName">ManufactureName</string>
    <string name="RegCertDataList">RegCertDataList</string>
    <string name="ManufactureId">    ManufactureId</string>
    <string name="BatteryLevel">    Battery Level</string>
    <string name="OrgId">    OrganizationId</string>
    <string name="Txpower">    Txpower Level</string>
    <string name="Noupdate">    No Update</string>
    <string name="ReadTxPower">ReadTxPower</string>
    <string name="high_alert">HIGH Alert triggered!</string>
    <string name="low_alert">LOW Alert triggered!</string>
    <string name="writeTxnoti">TxNoti</string>
    <string name="readRssi">Read Rssi Value</string>
    <string name="Readdummy">D Read</string>
    <string name="removeBond">Remove Bond</string>
    <string name="paired">paired</string>
    <string name="popup_title">Quit nRF UART?</string>
    <string name="popup_message">Do you want to quit this Application?</string>
    <string name="popup_yes">YES</string>
    <string name="popup_no">NO</string>
    <string name="ble_not_supported">Bluetooth Low Energy not supported</string>
    <string name="scan">Scan</string>
    <string name="settings_text_pwm_min_base">PWM min value</string>
    <string name="settings_text_pwm_max_base">PWM max value</string>
    <string name="leftArraw"><![CDATA[<<]]></string>
    <string name="rightArrow"><![CDATA[>>]]></string>

    <string-array name="Weight">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>12</item>
        <item>14</item>
        <item>16</item>
        <item>18</item>
        <item>20</item>
        <item>22</item>
        <item>24</item>
        <item>26</item>
        <item>28</item>
        <item>30</item>
    </string-array>

</resources>
