<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	tools:context="DeviceFirmwareUpgradeFragment">

	<androidx.constraintlayout.widget.ConstraintLayout
	
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<!-- The size of text below must be fixed, therefore dp are used instead of sp -->

		<!--androidx.appcompat.widget.AppCompatTextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerVertical="true"
			android:layout_marginLeft="@dimen/dfu_feature_title_long_margin"
			android:rotation="270"
			android:text="@string/dfu_feature_title_long"
			
			android:textSize="32dp"
			android:textStyle="bold"/-->

		<androidx.appcompat.widget.AppCompatTextView
			android:id="@+id/device_name"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerHorizontal="true"
			android:ellipsize="end"
			android:freezesText="true"
			android:maxLines="1"
			android:text="@string/dfu_default_name"
			android:textAllCaps="true"
			android:textAppearance="?android:attr/textAppearanceLarge"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

		<!--			android:text="@string/action_select"-->


		<LinearLayout
			android:id="@+id/linearLayout7"
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_alignParentStart="false"
			android:layout_alignParentTop="false"
			android:layout_marginTop="8dp"
			android:gravity="center_horizontal"
			android:orientation="vertical"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintTop_toBottomOf="@id/device_name">

			<!-- Application section -->

			<LinearLayout

				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="8dp"
				android:layout_marginTop="8dp"
				android:layout_marginRight="8dp"
				android:orientation="vertical">

				<androidx.appcompat.widget.AppCompatTextView

					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/dfu_section_application_header"
					android:textAlignment="center" />

				<TableLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:padding="8dp">

					<TableRow
						android:layout_width="match_parent"
						android:layout_height="wrap_content">

						<androidx.appcompat.widget.AppCompatTextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/dfu_file_name_label" />

						<androidx.appcompat.widget.AppCompatTextView
							android:id="@+id/file_name"
							android:layout_width="0dp"
							android:layout_height="wrap_content"
							android:layout_marginLeft="5dp"
							android:layout_weight="1"
							android:ellipsize="middle"
							android:freezesText="true"
							android:singleLine="true" />
					</TableRow>

					<TableRow
						android:layout_width="match_parent"
						android:layout_height="wrap_content">

						<androidx.appcompat.widget.AppCompatTextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/dfu_file_type_label" />

						<androidx.appcompat.widget.AppCompatTextView
							android:id="@+id/file_type"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_marginLeft="5dp"
							android:freezesText="true" />
					</TableRow>

					<TableRow
						android:layout_width="match_parent"
						android:layout_height="wrap_content">

						<androidx.appcompat.widget.AppCompatTextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/dfu_file_scope_label" />

						<androidx.appcompat.widget.AppCompatTextView
							android:id="@+id/file_scope"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_marginLeft="5dp"
							android:freezesText="true" />
					</TableRow>

					<TableRow
						android:layout_width="match_parent"
						android:layout_height="wrap_content">

						<androidx.appcompat.widget.AppCompatTextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/dfu_file_size_label" />

						<androidx.appcompat.widget.AppCompatTextView
							android:id="@+id/file_size"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_marginLeft="5dp"
							android:freezesText="true" />
					</TableRow>

					<TableRow
						android:layout_width="match_parent"
						android:layout_height="wrap_content">

						<androidx.appcompat.widget.AppCompatTextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/dfu_file_status_label" />

						<androidx.appcompat.widget.AppCompatTextView
							android:id="@+id/file_status"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_marginStart="5dp"
							android:freezesText="true"
							android:text="@string/dfu_file_status_no_file" />
					</TableRow>
				</TableLayout>

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="4dp"
					android:layout_marginBottom="8dp"
					android:gravity="center_vertical"
					android:orientation="horizontal"
					android:paddingLeft="0dp">

					<Button
						android:id="@+id/file_update_check"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginLeft="10dp"
						android:text="Check"
						android:layout_weight="1"/>

					<Button
						android:id="@+id/action_select_file"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_weight="1"

						android:text="@string/dfu_action_select_file" />


					<!--						android:src="@drawable/ic_help"-->

				</LinearLayout>
			</LinearLayout>

			<!-- DFU section -->

			<LinearLayout
				android:id="@+id/dfu_pane"

				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="8dp"
				android:layout_marginTop="15dp"
				android:layout_marginRight="8dp"
				android:layout_marginBottom="8dp"
				android:orientation="vertical">

				<androidx.appcompat.widget.AppCompatTextView

					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/dfu_section_dfu_header"
					android:textAlignment="center" />

				<!--					app:backgroundTint="@color"-->


				<Button
					android:id="@+id/action_upload"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_margin="8dp"
					android:enabled="false"
					android:text="@string/dfu_action_upload" />

				<androidx.appcompat.widget.AppCompatTextView
					android:id="@+id/textviewUploading"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_margin="8dp"
					android:freezesText="true"
					android:text="@string/dfu_status_uploading"
					android:visibility="invisible" />

				<ProgressBar
					android:id="@+id/progressbar_file"
					style="@android:style/Widget.Holo.ProgressBar.Horizontal"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:max="100"
					android:visibility="invisible" />

				<androidx.appcompat.widget.AppCompatTextView
					android:id="@+id/textviewProgress"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_margin="8dp"
					android:freezesText="true"
					android:text="@string/dfu_uploading_percentage_label"
					android:visibility="invisible" />
			</LinearLayout>

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="right"
				android:layout_marginRight="8dp"
				android:text="@string/dfu_lib_version"
				android:textSize="12sp" />
		</LinearLayout>


	</androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>